# OpenCV_CPP

01.imread_imshow/: main.cpp
02.filters/: main.cpp
03.erosion_dilation/: main.cpp
04.SobelOperator/: main.cpp
05.filter2D/: main.cpp
06.Laplace/: main.cpp
07.drawingRect/: main.cpp
08.circle&line/: main.cpp
09.text/: main.cpp
10.fillPoly/: CMakeLists.txt  main.cpp
11.drawContours/: main.cpp
12.resize/: main.cpp
13.warpPerpective/: main.cpp
